# clawspec

./: .git-plop.toml  .gitignore  .mise.toml  BREAKING_CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_IMPROVEMENTS.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  instruction.md  plan.md  release-plz.toml
.claude/: settings.local.json
.github/: CODEOWNERS  DEPENDABOT_AUTO_MERGE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  claude-code-review.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml
.mise-tasks/: audit  check  coverage  fix  lint  perf-regression  spectral  test
.mise-tasks/test/: _default  review
docs/: PERFORMANCE_REGRESSION_TESTS.md  query-parameters.md
examples/: query_parameters_example.rs
examples/axum-example/: Cargo.toml  README.md
examples/axum-example/doc/: openapi.yml
examples/axum-example/src/: errors.rs  extractors.rs  lib.rs  main.rs  routes.rs  state.rs
examples/axum-example/src/observations/: db.json  db.jsonl  domain.rs  mod.rs  repository.rs  routes.rs
examples/axum-example/tests/: error_handling_integration.rs  generate_openapi.rs  test_json_schema_capture.rs  test_optional_json.rs  test_raw_result.rs  test_redaction_example.rs  test_request_body_redaction.rs  test_result_json.rs  test_split_openapi.rs
examples/axum-example/tests/common/: client.rs  mod.rs  test_app.rs
examples/axum-example/tests/snapshots/: test_json_schema_capture__json_schema_capture_without_explicit_registration.snap
lib/clawspec-cli/: Cargo.toml
lib/clawspec-cli/src/: main.rs
lib/clawspec-core/: CHANGELOG.md  Cargo.toml  README.md
lib/clawspec-core/benches/: path_replacement.rs  performance.rs  performance_regression.rs
lib/clawspec-core/examples/: get.rs
lib/clawspec-core/src/: lib.rs  main.rs  yaml.rs
lib/clawspec-core/src/_tutorial/: chapter_0.rs  chapter_1.rs  chapter_2.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_7.rs  mod.rs
lib/clawspec-core/src/client/: auth.rs  body.rs  builder.rs  call.rs  call_parameters.rs  collectors.rs  cookies.rs  error.rs  headers.rs  mock_server_tests.rs  mod.rs  output.rs  param.rs  parameters.rs  path.rs  query.rs  redaction.rs  schema.rs  security.rs
lib/clawspec-core/src/client/call/: builder.rs  execution.rs  mod.rs  tests.rs
lib/clawspec-core/src/client/oauth2/: config.rs  error.rs  mod.rs  provider.rs  token.rs
lib/clawspec-core/src/client/openapi/: channel.rs  collectors.rs  mod.rs  operation.rs  result.rs  schema.rs
lib/clawspec-core/src/client/parameters/: body.rs  cookies.rs  headers.rs  mod.rs  param.rs  path.rs  query.rs
lib/clawspec-core/src/client/response/: mod.rs  output.rs  redaction.rs  status.rs
lib/clawspec-core/src/client/response/redaction/: apply.rs  mod.rs  path_selector.rs  redactor.rs  request_body.rs  value_builder.rs
lib/clawspec-core/src/split/: fragment.rs  mod.rs  splitter.rs  strategies.rs
lib/clawspec-core/src/test_client/: error.rs  mod.rs  test_server.rs
lib/clawspec-macro/: CHANGELOG.md  Cargo.toml
lib/clawspec-macro/src/: lib.rs  main.rs
lib/clawspec-utoipa/: Cargo.toml
lib/clawspec-utoipa/benches/: path_replacement.rs  performance.rs  performance_regression.rs
lib/clawspec-utoipa/examples/: get.rs
lib/clawspec-utoipa/src/: lib.rs
lib/clawspec-utoipa/src/client/: .path.rs.pending-snap  body.rs  builder.rs  call.rs  collectors.rs  error.rs  headers.rs  integration_tests.rs  mod.rs  output.rs  param.rs  path.rs  query.rs  schema.rs
