[workspace]
members = ["lib/clawspec-core", "lib/clawspec-macro", "examples/*"]
resolver = "2"

[workspace.package]
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/clawspec"
homepage = "https://github.com/ilaborie/clawspec"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_saphyr = { version = "0.0.7", package = "serde-saphyr" }
serde_urlencoded = "0.7.1"

utoipa = "5.3.1"

tokio = "1.47.0"
axum = "0.8.4"

reqwest = { version = "0.12.15", default-features = false }
headers = "0.4.0"
http = "1.3.1"
url = "2.5.4"
percent-encoding = "2.3.1"

regex = "1.11.1"
tracing = "0.1.41"
derive_more = "2.0.1"
indexmap = "2.9.0"
slug = "0.1.6"
anyhow = "1.0.98"
uuid = "1.11.0"
mime = "0.3.17"
cruet = "0.15.0"
bytes = "1.9.0"
chrono = "0.4.38"
pico-args = "0.5.0"
serde-xml-rs = "0.8.1"
tower-http = "0.6.6"
backon = "1.3.0"
base64 = "0.22.1"
zeroize = "1.8.1"
jsonptr = "0.6.3"

## Dev
rstest = "0.26.1"
insta = "1.42.1"
assert2 = "0.3.15"
tracing-subscriber = "0.3.20"
criterion = "0.7.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

module_name_repetitions = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "none"
