[workspace]
members = ["lib/clawspec-core", "lib/clawspec-macro", "examples/*"]
resolver = "2"

[workspace.package]
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/clawspec"
homepage = "https://github.com/ilaborie/clawspec"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde-saphyr =  "0.0.12"
serde_urlencoded = "0.7.1"

utoipa = "5.3.1"

tokio = "1.47.0"
axum = "0.8.7"

reqwest = { version = "0.13.1", default-features = false }
headers = "0.4.0"
http = "1.4.0"
url = "2.5.4"
percent-encoding = "2.3.1"

regex = "1.11.1"
tracing = "0.1.43"
# Transitive dependency - minimum version required for Display impl on Style
anstyle = "1.0.5"
derive_more = { version = "2.1.0", default-features = false, features = ["error", "display", "from", "deref", "deref_mut", "debug"] }
indexmap = "2.12.1"
slug = "0.1.6"
anyhow = "1.0.98"
uuid = "1.19.0"
mime = "0.3.17"
cruet = "0.15.0"
bytes = "1.11.0"
chrono = "0.4.38"
pico-args = "0.5.0"
serde-xml-rs = "0.8.2"
tower-http = "0.6.6"
backon = "1.3.0"
base64 = "0.22.1"
zeroize = "1.8.1"
jsonptr = "0.7.1"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
serde_json_path = "0.7.1"
jiff = "0.2"

## Dev
rstest = "0.26.1"
insta = "1.44.3"
assert2 = "0.3.15"
tracing-subscriber = "0.3.22"
criterion = "0.8.1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

module_name_repetitions = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "none"
