[workspace]
members = ["lib/clawspec-core", "lib/clawspec-macro", "examples/*"]
resolver = "2"

[workspace.package]
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/clawspec"
homepage = "https://github.com/ilaborie/clawspec"

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
serde-saphyr =  "0.0.29"
# serde-saphyr under-constrains encoding_rs_io; bom_override() requires >=0.1.2 for minimal-versions CI
encoding_rs_io = "0.1.2"
serde_urlencoded = "0.7.1"

utoipa = "5.5.0"

tokio = "1.53.0"
axum = "0.8.9"

reqwest = { version = "0.13.4", default-features = false }
headers = "0.4.1"
http = "1.4.2"
url = "2.5.8"
percent-encoding = "2.3.2"

regex = "1.13.1"
tracing = "0.1.44"
# Transitive dependencies - minimum versions for compatibility
# annotate-snippets uses anstyle Display impl (added in 1.0.5)
annotate-snippets = "0.12.16"
anstyle = "1.0.14"
# lazy_static 1.0.0 lacks the local_inner_macros export sharded-slab relies on
lazy_static = "1.5.0"
derive_more = { version = "2.1.1", default-features = false, features = ["error", "display", "from", "deref", "deref_mut", "debug"] }
indexmap = "2.14.0"
slug = "0.1.6"
anyhow = "1.0.103"
uuid = "1.24.0"
mime = "0.3.17"
cruet = "1.0.0"
bytes = "1.12.1"
chrono = "0.4.45"
pico-args = "0.5.0"
serde-xml-rs = "0.8.2"
tower-http = "0.7.0"
backon = "1.6.0"
base64 = "0.22.1"
zeroize = "1.9.0"
jsonptr = "0.7.1"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
# oauth2 under-constrains thiserror; its RequestTokenError From impl needs >=1.0.50 to compile on rustc 1.89 (minimal-versions CI)
thiserror = "1.0.50"
serde_json_path = "0.7.2"
jiff = "0.2.32"

## Dev
rstest = "0.26.1"
insta = "1.48.0"
assert2 = "0.4.0"
tracing-subscriber = "0.3.23"
criterion = "0.8.2"
wiremock = "0.6.5"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

module_name_repetitions = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "none"
