[package]
name = "clawspec-core"
version = "0.2.1"
edition = "2024"
description = "Core library for generating OpenAPI specifications from tests"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["openapi", "testing", "api", "documentation", "spec"]
categories = ["development-tools::testing", "web-programming", "api-bindings"]

[features]
default = []
redaction = ["dep:jsonptr"]

[dependencies]

utoipa = { workspace = true, features = ["debug", "yaml"] }

tokio = { workspace = true , features = ["sync"]}

reqwest = { workspace = true,  default-features = false, features = ["rustls-tls", "json"] }
headers = { workspace = true }
http = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }

serde = {workspace = true }
serde_json = {workspace = true }
serde_path_to_error = {workspace = true}
serde_urlencoded = {workspace = true}

regex = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
tracing = {workspace = true }
indexmap = {workspace = true }
slug = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
mime = { workspace = true }
cruet = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
jsonptr = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"]}
tokio = { workspace = true, features = ["full"]}
insta = { workspace = true }
serde_saphyr = { workspace = true}
criterion = { workspace = true }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "path_replacement"
harness = false
