[package]
name = "clawspec-core"
version = "0.4.1"
edition = "2024"
description = "Core library for generating OpenAPI specifications from tests"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["openapi", "testing", "api", "documentation", "spec"]
categories = ["development-tools::testing", "web-programming", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
oauth2 = ["dep:oauth2"]
redaction = ["dep:jsonptr", "dep:serde_json_path"]
yaml = ["dep:serde-saphyr"]

[dependencies]

utoipa = { workspace = true, features = ["debug", "yaml"] }

tokio = { workspace = true , features = ["sync"]}

reqwest = { workspace = true,  default-features = false, features = [ "json"] }
headers = { workspace = true }
http = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }

serde = {workspace = true }
serde_json = {workspace = true }
serde_path_to_error = {workspace = true}
serde_urlencoded = {workspace = true}

regex = { workspace = true }
derive_more = { workspace = true }
tracing = {workspace = true }
indexmap = {workspace = true }
slug = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
mime = { workspace = true }
cruet = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
jsonptr = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
serde_json_path = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"]}
tokio = { workspace = true, features = ["full"]}
insta = { workspace = true }
serde-saphyr = { workspace = true}
criterion = { workspace = true }
# Force minimum versions for minimal-versions CI (annotate-snippets has incorrect anstyle dep)
annotate-snippets = { workspace = true }
anstyle = { workspace = true }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "path_replacement"
harness = false
