[package]
name = "clawspec-core"
version = "0.4.4"
edition = "2024"
description = "Core library for generating OpenAPI specifications from tests"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["openapi", "testing", "api", "documentation", "spec"]
categories = ["development-tools::testing", "web-programming", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
oauth2 = ["dep:oauth2", "dep:thiserror"]
redaction = ["dep:jsonptr", "dep:serde_json_path"]
yaml = ["dep:serde-saphyr", "dep:encoding_rs_io"]

[dependencies]

utoipa = { workspace = true, features = ["debug", "yaml"] }

tokio = { workspace = true , features = ["sync"]}

reqwest = { workspace = true,  default-features = false, features = [ "json"] }
headers = { workspace = true }
http = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }

serde = {workspace = true }
serde_json = {workspace = true }
serde_path_to_error = {workspace = true}
serde_urlencoded = {workspace = true}

regex = { workspace = true }
derive_more = { workspace = true }
tracing = {workspace = true }
indexmap = {workspace = true }
slug = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
mime = { workspace = true }
cruet = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
jsonptr = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
# Floor pin only: oauth2 under-constrains thiserror (RequestTokenError From impl needs >=1.0.50 on rustc 1.89)
thiserror = { workspace = true, optional = true }
serde_json_path = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }
# Floor pin only: serde-saphyr under-constrains encoding_rs_io (needs bom_override, >=0.1.2)
encoding_rs_io = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"]}
tokio = { workspace = true, features = ["full"]}
insta = { workspace = true }
serde-saphyr = { workspace = true}
criterion = { workspace = true }
wiremock = { workspace = true }
# Force minimum versions for minimal-versions CI (annotate-snippets has incorrect anstyle dep)
annotate-snippets = { workspace = true }
anstyle = { workspace = true }
# Force minimum version for minimal-versions CI (sharded-slab, via tracing-subscriber, needs lazy_static >=1.4)
lazy_static = { workspace = true }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "path_replacement"
harness = false
