[package]
name = "clawspec-utoipa"
version = "0.1.0"
edition = "2024"

[dependencies]

utoipa = { workspace = true, features = ["debug"] }

tokio = { workspace = true , features = ["sync"]}

reqwest = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
url = { workspace = true }
urlencoding  = { workspace = true }

serde = {workspace = true }
serde_json = {workspace = true }
serde_path_to_error = {workspace = true}

regex = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
tracing = {workspace = true }
indexmap = {workspace = true }
slug = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"]}
tokio = { workspace = true, features = ["full"]}
insta = { workspace = true }
serde_yaml = { workspace = true}
